feature(reports): create typing for text reports (#5994)
relates to OPT-6694

---------

Co-authored-by: Giuliano Rodrigues Lima <giuliano.rodrigues-lima@camunda.com>