@@ -6,7 +6,6 @@
 package org.camunda.optimize.dto.optimize.query.dashboard;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
-import com.google.common.collect.ImmutableMap;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
@@ -14,13 +13,16 @@ import lombok.NoArgsConstructor;
 import lombok.experimental.FieldNameConstants;
 import org.camunda.optimize.dto.optimize.RoleType;
 import org.camunda.optimize.dto.optimize.query.collection.CollectionEntity;
+import org.camunda.optimize.dto.optimize.query.dashboard.tile.DashboardReportTileDto;
 import org.camunda.optimize.dto.optimize.query.entity.EntityData;
 import org.camunda.optimize.dto.optimize.query.entity.EntityResponseDto;
 import org.camunda.optimize.dto.optimize.query.entity.EntityType;
 import org.camunda.optimize.service.util.IdGenerator;
 
+import javax.validation.Valid;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 
 import static java.util.stream.Collectors.toSet;
@@ -32,23 +34,19 @@ import static java.util.stream.Collectors.toSet;
 @FieldNameConstants
 public class DashboardDefinitionRestDto extends BaseDashboardDefinitionDto implements CollectionEntity {
 
-  protected List<ReportLocationDto> reports = new ArrayList<>();
+  @Valid
+  protected List<DashboardReportTileDto> tiles = new ArrayList<>();
 
   @JsonIgnore
-  public Set<String> getReportIds() {
-    return reports.stream().map(ReportLocationDto::getId).filter(IdGenerator::isValidId).collect(toSet());
-  }
-
-  @JsonIgnore
-  public Set<String> getExternalResourceUrls() {
-    return reports.stream().map(ReportLocationDto::getId).filter(id -> !IdGenerator.isValidId(id)).collect(toSet());
+  public Set<String> getTileIds() {
+    return tiles.stream().map(DashboardReportTileDto::getId).filter(IdGenerator::isValidId).collect(toSet());
   }
 
   @Override
   public EntityResponseDto toEntityDto(final RoleType roleType) {
     return new EntityResponseDto(
       getId(), getName(), getLastModified(), getCreated(), getOwner(), getLastModifier(), EntityType.DASHBOARD,
-      new EntityData(ImmutableMap.of(EntityType.REPORT, (long) getReports().size())),
+      new EntityData(Map.of(EntityType.REPORT, (long) getTiles().size())),
       roleType
     );
   }
